fixed whitespace

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,11 @@
+html,
 body {
     font-family: 'Futura', sans-serif;
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
 }
 
 @font-face {
@@ -124,7 +130,7 @@ div.rushRhees {
 
 /* buttons */
 
-.buttons{
+.buttons {
     height: 10rem;
     width: 30rem;
     border-radius: 65px !important;
@@ -134,16 +140,17 @@ div.rushRhees {
     background-color: #230C49 !important;
     color: white !important;
 }
+
+
 /* 
 .buttons[disabled] {
 
 } */
 
-.buttons:hover:enabled{
+.buttons:hover:enabled {
     background-color: #2a0e57 !important;
     box-shadow: 0 16px 16px 0 rgb(64 42 133 / 80%), 0px 5px 30px 20px rgb(64 42 133 / 80%);
 }
-
 
 .buttonLabel {
     color: white;
